--- a/frontend/src/styles/globals.css
+++ b/frontend/src/styles/globals.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&');
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -7,4 +8,5 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  @apply font-common;
 }
